fixed mobile on smaller screens

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -143,7 +143,16 @@ body {
     display: none;
   }
 
-@media (max-width: 762px) {
+@media (max-width: 991px) {
+   .modal-dialog{
+    max-width: initial;
+  }
+  .modal-body, .modal-dialog {
+    padding: 1rem!important;
+  }
+}
+
+@media (max-width: 762px) { 
   .search-input-wrapper {
     padding: 1rem!important;
     margin-top: 0;
@@ -201,4 +210,8 @@ body {
 
 .result-header h5 {
   font-size: 1.1rem;
+}
+
+#modal1 .form-group {
+  margin-bottom: 0;
 }
